Issue #10133: Make multiprocessing deallocate buffer if socket read fails.

Patch by Hallvard B Furuseth.